--- a/overlay/packages/apps/Flashlight/res/values/config.xml
+++ b/overlay/packages/apps/Flashlight/res/values/config.xml
@@ -20,17 +20,8 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
-    <!-- If there is no sysfs-based control mechanism, enable this -->
-    <bool name="useCameraInterface">false</bool>
 
     <!-- Full path to the sysfs toggle -->
-    <string name="flashDevice">/sys/class/camera/rear/rear_flash</string>
-
-    <!-- Lowest setting -->
-    <integer name="valueOn">159</integer>
-    <!-- Middle setting -->
-    <integer name="valueHigh">10</integer>
-    <!-- Highest setting, leave -1 if it doesn't exist -->
-    <integer name="valueDeathRay">1</integer>
+    <string name="config_sysfs_torch">/sys/class/camera/rear/rear_flash</string>
 
 </resources>
