--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -37,21 +37,21 @@
         Must be overridden in platform specific overlays
     -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>150</item>
-        <item>300</item>
-        <item>600</item>
+        <item>10</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+        <item>400</item>
+        <item>500</item>
+        <item>800</item>
         <item>1000</item>
+        <item>1600</item>
         <item>3000</item>
-        <item>8000</item>
-        <item>15000</item>
-        <item>28000</item>
-        <item>41000</item>
-        <item>54000</item>
-        <item>67000</item>
-        <item>80000</item>
-        <item>100000</item>
-        <item>150000</item>
-        <item>200000</item>
+        <item>6000</item>
+        <item>10000</item>
+        <item>40000</item>
+        <item>60000</item>
+        <item>70000</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -59,22 +59,22 @@
         than the size of the config_autoBrightnessLevels array.
     -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>20</item>
-        <item>30</item>
-        <item>40</item>
-        <item>50</item>
-        <item>60</item>
-        <item>70</item>
-        <item>80</item>
-        <item>100</item>
-        <item>120</item>
-        <item>140</item>
-        <item>160</item>
-        <item>180</item>
-        <item>200</item>
-        <item>220</item>
-        <item>240</item>
-        <item>255</item>
+        <item>20</item>    <!-- 0-10 -->
+        <item>30</item>    <!-- 10-50 -->
+        <item>40</item>    <!-- 50-100 -->
+        <item>50</item>    <!-- 100-200 -->
+        <item>60</item>    <!-- 200-400 -->
+        <item>70</item>    <!-- 400-500 -->
+        <item>80</item>    <!-- 500-800 -->
+        <item>100</item>   <!-- 800-1000 -->
+        <item>120</item>   <!-- 1000-1600 -->
+        <item>140</item>   <!-- 1600-3000 -->
+        <item>160</item>   <!-- 3000-6000 -->
+        <item>180</item>   <!-- 6000-10000 -->
+        <item>200</item>   <!-- 10000-40000 -->
+        <item>220</item>   <!-- 40000-60000 -->
+        <item>240</item>   <!-- 60000-70000 -->
+        <item>255</item>   <!-- 70000+ -->
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
